--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ pagination:
 ---
 
 <div class="header-bar">
-  <h1>My Portfolio, no-one elses</h1>
+  <h1>My Portfolio</h1>
   <h2>Cool colourful theme!</h2>
   <br/>
   <hr>
